# ai_robotics

./: .gitignore  CLAUDE.md
.claude/: settings.json
.claude/knowledge/: m5stack_cores3_specs.md  stack_chan_specs.md
.claude/memory/: feedback_git_branch.md  feedback_memory_location.md  feedback_memory_vs_claude_md.md  feedback_permissions.md  feedback_project_structure.md  feedback_settings_absolute_paths.md  project_core_s3.md  project_gemma4_vision.md
.claude/rules/: coding_style.md  docs_style.md  firmware.md  git.md
.claude/scripts/: pre-commit-check.sh
.claude/skills/: add-permission.md
arduino/dynamixel_motor/multi_move/: multi_move.ino
docs/firmware/: platformio.md
docs/local_pc/: lmstudio.md  ollama.md
docs/project/: core_s3_firmware.md  platform_roadmap.md  setup.md  startup.md
docs/spec/: module_interface.md
dynamixel_motor/simple_move/: simple_move.ino
local_pc/: led_matrix_client.py  move_test.py  multi_read_write.py  plot_imu.py
local_pc/camera_client/: .gitignore  analyzer.py  api.py  main.py  pyproject.toml  servo_client.py  servo_control.py  stream.py
local_pc/camera_viewer/: index.html
local_pc/platform/inference/claude_code/: pyproject.toml
local_pc/platform/inference/claude_code/src/: main.py
local_pc/platform/inference/lm_studio/: pyproject.toml
local_pc/platform/inference/lm_studio/src/: main.py
m5stack/imu_test/src/: main.cpp
m5stack/led_matrix/: platformio.ini
pc/: led_matrix_client.py  main.py  move_test.py  multi_read_write.py  plot_imu.py  recv_imu.py  reset_pos.py  servo.py  standup.py  test_pos.py
(+34 files in other folders)
